[package]
name = "electronic-print"
version = "0.0.2"
edition = "2021"
rust-version = "1.60"

categories = [
    "os",
    "os::windows-apis"
]

[dependencies]
tauri = { version = "1.3", features = [ "window-data-url", "shell-all", "http-all", "window-all", "fs-all"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.18"
tungstenite = "0.20"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3" 
base64 = "0.21.2"
log = "0.4"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.16"
parking_lot = "0.12"
open = "3.0"
[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.bundle.macos]
universal = true
